--- a/reserve.html
+++ b/reserve.html
@@ -36,7 +36,7 @@
 					</div>
 					<div class="panel-body">
 
-						<form role="form">
+						<form role="form" action="/api/reservations" method="post">
 
 							<div class="form-group">
 								<label for="">Name</label>
@@ -50,7 +50,7 @@
 
 							<div class="form-group">
 								<label for="">Email</label>
-								<input type="text" class="form-control" id="reserve_email">
+								<input type="text" class="form-control" name="reserve_email" id="reserve_email">
 							</div>
 
 							<div class="form-group">
