--- a/tables.html
+++ b/tables.html
@@ -3,8 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tables Page</title>
-
-	<!-- Latest compiled and minified CSS & JS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
@@ -60,4 +58,63 @@
 	</div>
 
 </body>
+<script type="text/javascript">
+
+	function tableQuery(){
+		var currentURL = window.location.origin;
+		$.ajax({url: currentURL + "/api/tables", method: "GET"})
+			.done(function(tableData) {
+				console.log("------------------------------------");
+				console.log("URL: " + currentURL + "/api/tables");
+				console.log("------------------------------------");
+				console.log(tableData);
+				console.log("------------------------------------")
+
+				for (var i=0; i<tableData.length; i++){
+					var tableSection = $("<div>");
+					tableSection.addClass('well');
+					tableSection.attr('id', 'tableWell-' + i+1)
+					$('#tableSection').append(tableSection);
+					var tableNumber = i + 1;
+					$("#tableWell-"+ i+1).append('<h2><span class="label label-primary">' + tableNumber + "</span> | " + tableData[i].custID + "</h2>");
+				}
+			});
+	}
+
+	function waitListQuery(){
+		var currentURL = window.location.origin;
+		$.ajax({url: currentURL + "/api/waitlist", method: "GET"})
+			.done(function(waitlistData) {
+				console.log("------------------------------------");
+				console.log("URL: " + currentURL + "/api/waitlist");
+				console.log("------------------------------------");
+				console.log(waitlistData);
+				console.log("------------------------------------")
+
+				for (var i=0; i<waitlistData.length; i++){
+					var waitlistSection = $("<div>");
+					waitlistSection.addClass('well');
+					waitlistSection.attr('id', 'waitlistWell-' + i+1)
+					$('#waitlistSection').append(waitlistSection);
+					var tableNumber = i + 1;
+					$("#waitlistWell-"+ i+1).append('<h2><span class="label label-primary">' + tableNumber + "</span> | " + waitlistData[i].custID + "</h2>");
+				}
+			});
+	}
+
+	function clearTable(){
+		var currentURL = window.location.origin;
+		$.ajax({url: currentURL + "/api/clear", method: "POST"})
+	}
+
+	$("#clear").on('click', function(){
+		clearTable();
+		location.reload();
+	})
+
+	tableQuery();
+	waitListQuery();
+
+
+</script>
 </html>
