--- a/reserve.html
+++ b/reserve.html
@@ -40,12 +40,12 @@
 
 							<div class="form-group">
 								<label for="">Name</label>
-								<input type="text" class="form-control" id="reserve_name">
+								<input type="text" class="form-control" name="reserve_name" id="reserve_name">
 							</div>
 
 							<div class="form-group">
 								<label for="">Phone Number</label>
-								<input type="text" class="form-control" id="reserve_phone">
+								<input type="text" class="form-control" name="rerserve_phone" id="reserve_phone">
 							</div>
 
 							<div class="form-group">
@@ -55,7 +55,7 @@
 
 							<div class="form-group">
 								<label for="">Unique ID</label>
-								<input type="text" class="form-control" id="reserve_uniqueID">
+								<input type="text" class="form-control" name="reserve_uniqueID" id="reserve_uniqueID">
 							</div>
 
 							<button type="submit" class="btn btn-primary submit">Submit</button>
