--- a/reserve.html
+++ b/reserve.html
@@ -68,43 +68,52 @@
 
 	    <footer class="footer">
 	      <div class="container">
-	        <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a> </p>
+	        <p><a href="/api/reservations">API Table Link</a> | <a href="/api/waitlist">API Wait List</a> </p>
 	      </div>
 	    </footer>
 
 	</div>
 
 </body>
-<script type="text/javascript">
+
+</html>
+
+<!-- <script type="text/javascript">
 	$(".submit").on("click", function(){
-		var newRes = {
-			custName: $('#reserve_name').val().trim(),
-			phoneNum: $('#reserve_phone').val().trim(),
-			custEmail: $('#reserve_email').val().trim(),
-			custID: $('#reserve_ID').val().trim()
-		};
-
-		console.log(newRes);
-
-		var currentURL = window.location.origin;
-	    $.post(currentURL + "/api/tables", newRes,
-	    function(data){
-	    	if(data == true){
-	    		alert("You have been booked! We will see you soon!")
-	    	}
-	    	if(data == false){
-	    		alert("Sorry, you are on the waiting list")
-	    	}
-
-    	$('#reserve_name').val("");
+		
+	    	// if(data == true){
+	    	// 	alert("You have been booked! We will see you soon!")
+	    	// }
+	    	// if(data == false){
+	    	// 	alert("Sorry, you are on the waiting list")
+	    	// };
+		$('#reserve_name').val("");
 			$('#reserve_phone').val("");
 			$('#reserve_email').val("");
 			$('#reserve_ID').val("");
-	    });
+		});
+		// var newRes = {
+		// 	custName: $('#reserve_name').val().trim(),
+		// 	phoneNum: $('#reserve_phone').val().trim(),
+		// 	custEmail: $('#reserve_email').val().trim(),
+		// 	custID: $('#reserve_ID').val().trim()
+		// };
 
-return false;
+		console.log(newRes);
 
-});
+		// var currentURL = window.location.origin;
+	  //   $.post(currentURL + "/api/reservations", newRes,
+	    
+
+    // 	$('#reserve_name').val("");
+		// 	$('#reserve_phone').val("");
+		// 	$('#reserve_email').val("");
+		// 	$('#reserve_ID').val("");
+	  //   });
+
+// return false;
+
+
 
 </script>
-</html>
+</html> -->
